--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       #map_canvas_A img { max-width: none; }
       #map_canvas_B label { width: auto; display:inline; }
       #map_canvas_B img { max-width: none; }
+      #sortable1 li, #sortable2 li , #sortable3 li { margin: 0 5px 5px 5px; padding: 5px; font-size: 1.2em; width: 120px; }
     </style>
   </head>
   <body>
@@ -86,15 +87,52 @@
       <div class="row-fluid">
         <div id="content" class="span12">
           <div class="row-fluid">
-            <div class="span12 well well-small">
-              <div id="search-panel">
-                <input id="target" type="text" placeholder="Search Box">
-              </div>
-              <div id="map_canvas_B" style="width:794px; height:456px; margin: 0 auto 0;"></div>
+            <div class="span5 well well-small">
+              <div id="tabs">
+                <ul>
+                  <li><a href="#tabs-1">Day 1</a></li>
+                  <li><a href="#tabs-2">Day 2</a></li>
+                </ul>
+                <div id="tabs-1">
+                  <ul id="sortable1" class="connectedSortable ui-helper-reset">
+                    <li class="ui-state-default">Item 1</li>
+                    <li class="ui-state-default">Item 2</li>
+                    <li class="ui-state-default">Item 3</li>
+                    <li class="ui-state-default">Item 4</li>
+                    <li class="ui-state-default">Item 5</li>
+                  </ul>
+                </div>
+                <div id="tabs-2">
+                  <ul id="sortable2" class="connectedSortable ui-helper-reset">
+                    <li class="ui-state-highlight">Item 1</li>
+                    <li class="ui-state-highlight">Item 2</li>
+                    <li class="ui-state-highlight">Item 3</li>
+                    <li class="ui-state-highlight">Item 4</li>
+                    <li class="ui-state-highlight">Item 5</li>
+                  </ul>
+                </div>
+              </div>            
             </div>
-          </div>
-          <div class="row-fluid">
-            <div class="span9 well well-small">
+            <div class="span4 well well-small">
+              <div id="searchTab">
+                <ul>
+                  <li><a href="#searchTab-1">Search Result</a></li>
+                </ul>
+                <div id="searchTab-1">
+                  <ul id="sortable3" class="connectedSortable ui-helper-reset">
+                    <li class="ui-state-highlight">Item 1</li>
+                    <li class="ui-state-highlight">Item 2</li>
+                    <li class="ui-state-highlight">Item 3</li>
+                    <li class="ui-state-highlight">Item 4</li>
+                    <li class="ui-state-highlight">Item 5</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="span3 well well-small">
+              <div style="max-width: 200px; margin: 0 auto 5px;">
+              <button class="btn btn-large btn-block btn-primary" type="button">Sign Up Now!</button>
+              </div>
               <form class="form-inline">
                 <input type="text" class="input-small" placeholder="Email">
                 <input type="password" class="input-small" placeholder="Password">
@@ -103,11 +141,6 @@
                 </label>
                 <button type="submit" class="btn">Sign in</button>
               </form>
-            </div>
-            <div class="span3 well well-small">
-              <div style="max-width: 200px; margin: 0 auto 5px;">
-              <button class="btn btn-large btn-block btn-primary" type="button">Sign Up Now!</button>
-              </div>
             </div>
           </div>
           <div class="row-fluid">
@@ -149,8 +182,20 @@
           </div>
         </div>
       </div>
+          <div class="row-fluid">
+            <div class="span8 well well-small">
+              <div id="search-panel">
+                <input id="target" type="text" placeholder="Search Box">
+              </div>
+              <div id="map_canvas_B" style="width:794px; height:456px; margin: 0 auto 0;"></div>
+            </div>
+            <div class="span4 well well-small">
+            </div>
+          </div>
     </div>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDzGlmM7U3lBCNC4ShvUqG5EQOLOV34b1s&sensor=true&language=zh-TW"></script>
     <script src="js/tripall.js"></script>
