--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     <li class="ui-state-default">Item 4</li>
                     <li class="ui-state-default">Item 5</li>
                   </ul>
+
                 </div>
                 <div id="tabs-2">
                   <ul id="sortable2" class="connectedSortable ui-helper-reset">
@@ -120,11 +121,11 @@
                 </ul>
                 <div id="searchTab-1">
                   <ul id="sortable3" class="connectedSortable ui-helper-reset">
-                    <li class="ui-state-highlight">Item 1</li>
-                    <li class="ui-state-highlight">Item 2</li>
-                    <li class="ui-state-highlight">Item 3</li>
-                    <li class="ui-state-highlight">Item 4</li>
-                    <li class="ui-state-highlight">Item 5</li>
+                    <li class="ui-state-error">Item 1</li>
+                    <li class="ui-state-error">Item 2</li>
+                    <li class="ui-state-error">Item 3</li>
+                    <li class="ui-state-error">Item 4</li>
+                    <li class="ui-state-error">Item 5</li>
                   </ul>
                 </div>
               </div>
