--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <ul>
                   <li><a href="#tabs-1">Day 1</a></li>
                   <li><a href="#tabs-2">Day 2</a></li>
+                  <li><a class="btn"><i class="icon-plus"></i></a></li>
                 </ul>
                 <div id="tabs-1">
                   <ul id="sortable1" class="connectedSortable ui-helper-reset">
