Add CARD_SPEC to draw a card and refactor the draw function.

--- a/take6.html
+++ b/take6.html
@@ -3,10 +3,14 @@
     <title></title>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
     <style type="text/css" >
-        .take6-card {
-            border-width: 0px;
+        .greenTable {
+            width: 500px;
+            height: 500px;
+            border-width: 5px;
+            border-color: black;
             padding: 0px;
             margin: 0px;
+            background-color: green;
         }
         .take6-card-with-radius-border {
             width: 150px;
@@ -26,13 +30,7 @@
 </head>
 <body>
     <a href="#" id="button" class="ui-state-default ui-corner-all">Run Effect</a>
-    <div id="t52" class="take6-card">
-    </div>
-    <div id="t53" class="take6-card">
-    </div>
-    <div id="t54" class="take6-card">
-    </div>
-    <div id="t55" class="take6-card">
+    <div id="cardTable" class="greenTable">
     </div>
 </body>
 </html>
