Move card spec to a seperated file.

--- a/take6.html
+++ b/take6.html
@@ -26,6 +26,7 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script src="js/kinetic-v4.3.3.min.js"></script>
+    <script src="js/take6_cs.js"></script>
     <script src="js/take6.js"></script>
 </head>
 <body>
