--- a/take6.html
+++ b/take6.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <a href="#" id="button" class="ui-state-default ui-corner-all">Run Effect</a>
-    <div id="cardTable" class="greenTable">
+    <div id="cardTable" class="greenTable" style="margin: 0 auto 0;">
     </div>
 </body>
 </html>
